--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.3.13",
+    "axios": "^0.19.0",
     "canvas-nest.js": "^2.0.4",
     "hexo-helper-live2d": "^3.1.1",
     "live2d4vue": "^0.1.0",
     "vue": "^2.5.2",
     "vue-canvas-nest": "^2.0.0",
+    "vue-live2d-model": "^1.1.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
