--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.0",
     "canvas-nest.js": "^2.0.4",
     "hexo-helper-live2d": "^3.1.1",
+    "jquery": "^3.4.1",
     "live2d4vue": "^0.1.0",
     "vue": "^2.5.2",
     "vue-canvas-nest": "^2.0.0",
