--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "ant-design-vue": "^1.3.13",
     "axios": "^0.19.0",
     "canvas-nest.js": "^2.0.4",
+    "es6-promise": "^4.2.8",
     "hexo-helper-live2d": "^3.1.1",
     "jquery": "^3.4.1",
     "live2d4vue": "^0.1.0",
+    "lodash": "^4.17.15",
     "vue": "^2.5.2",
     "vue-canvas-nest": "^2.0.0",
     "vue-live2d-model": "^1.1.6",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
@@ -34,6 +37,7 @@
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.22.0",
@@ -61,6 +65,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
