--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jquery": "^3.4.1",
     "live2d4vue": "^0.1.0",
     "lodash": "^4.17.15",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
     "vue-canvas-nest": "^2.0.0",
     "vue-live2d-model": "^1.1.6",
@@ -65,6 +67,8 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "lodash-webpack-plugin": "^0.11.5",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
